fix: alignment

--- a/packages/p2p/src/components/advertiser-page/advertiser-page.scss
+++ b/packages/p2p/src/components/advertiser-page/advertiser-page.scss
@@ -104,6 +104,7 @@
 
                 @include mobile {
                     flex-direction: row;
+                    justify-content: center;
                     padding-left: 0.5rem;
                 }
             }
